// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PowerBlock should render correctly 1`] = `
<div>
  <div
    class="panel default"
  >
    <span
      class="title"
    >
      Power
    </span>
    <div>
      MockConfigValueDisplay
      <p>
        inputId: 
        power-input
      </p>
      <p>
        type: 
        default
      </p>
      <p>
        max: 
        100
      </p>
      <p>
        min: 
        0
      </p>
      <p>
        value: 
        87
      </p>
      <p>
        unit: 
        %
      </p>
      <p>
        hasMultiValue: 
      </p>
      <p>
        decimal: 
        1
      </p>
      <p>
        options: 
      </p>
      <button
        type="button"
      >
        MockConfigValueDisplayButton
      </button>
    </div>
    <input
      class="mock-config-slider"
      id="power_value"
      max="100"
      min="0"
      step="0.1"
      type="range"
      value="87"
    />
  </div>
</div>
`;

exports[`test PowerBlock should render correctly whe power is low 1`] = `
<div>
  <div
    class="panel default"
  >
    <span
      class="title"
    >
      Power
    </span>
    <div>
      MockConfigValueDisplay
      <p>
        inputId: 
        power-input
      </p>
      <p>
        type: 
        default
      </p>
      <p>
        max: 
        100
      </p>
      <p>
        min: 
        0
      </p>
      <p>
        value: 
        7
      </p>
      <p>
        unit: 
        %
      </p>
      <p>
        hasMultiValue: 
      </p>
      <p>
        decimal: 
        1
      </p>
      <p>
        options: 
      </p>
      <button
        type="button"
      >
        MockConfigValueDisplayButton
      </button>
    </div>
    <input
      class="mock-config-slider"
      id="power_value"
      max="100"
      min="0"
      step="0.1"
      type="range"
      value="7"
    />
    <div
      class="warning"
    >
      <div
        class="warning-icon"
      >
        <span
          aria-label="exclamation-circle"
          class="anticon anticon-exclamation-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="exclamation-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M464 688a48 48 0 1096 0 48 48 0 10-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        class="warning-text"
      >
        Lower laser power (under 10%) might not emit the laser light.
      </div>
    </div>
  </div>
</div>
`;

exports[`test PowerBlock should render correctly when type is panel-item 1`] = `
<div>
  <div
    class="object-panel-item"
    id="power"
  >
    <div
      class="main"
    >
      <button
        class="adm-button adm-button-default adm-button-fill-outline adm-button-mini adm-button-shape-rounded number-item"
        type="button"
      >
        <span>
          87
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      Power
    </div>
  </div>
</div>
`;
